@@ -444,6 +444,7 @@
     </property>
     <action name=""/>
     <addaction name="actionAbout"/>
+    <addaction name="actionCheck_for_new_versions"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuAbout"/>
@@ -481,6 +482,11 @@
    </property>
    <property name="menuRole">
     <enum>QAction::QuitRole</enum>
+   </property>
+  </action>
+  <action name="actionCheck_for_new_versions">
+   <property name="text">
+    <string>Check for new versions</string>
    </property>
   </action>
  </widget>
@@ -1079,9 +1085,26 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionCheck_for_new_versions</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkVersion()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>305</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>execute()</slot>
+  <slot>checkVersion()</slot>
   <slot>showAbout()</slot>
   <slot>showSurvey()</slot>
   <slot>addProduct()</slot>
